=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0
 - [ 2494959 ] addSeperator() spelling (fisharebest)
 - Added: [ 2497934 ] Time since login (wooc)
 - Changed: Correct handling of various media file types (canajun2eh)
 - Changed: Correct handling of media files that are URLs (canajun2eh)
 - Changed: Patch [ 2486577 ] applied. Auto show of Notes in Lightbox window and in slide show. (windmillway) 
 - Fixed: [ 1864683 ] NOTE text is duplicated (SVN2450) (fisharebest)
 - Fixed: [ 2009275 ] privacy / is_dead calculations are improper (fisharebest)
 - Fixed: [ 2473228 ] update_isdead while Gedcom import (fisharebest)
 - Fixed: [ 2481665 ] SVN 4632 age comp error (fisharebest)
 - Fixed: [ 2495180 ] [4719] Typo in RA (erostew)
 - Fixed: Incorrect block heading format on Index and Portal pages when page language is RTL (canajun2eh)
 - Changed: Indi Navigator: Set 5 Tabs only: Facts/Notes/Sources/Media/Album pending config options. Removed on/off Toggle link (windmillway)
 - Fixed: [ 2485553 ] Googlemap page error. Also removed Navigator "Tab", replaced with link on right (more to be done on config) (windmillway)
 - Changed: Re-write of Daitch-Mokotoff "sounds like" algorithm (canajun2eh)
 - Fixed: Googlemap Redraw Map/Map/Satellite/Hybrid/Terrain boxes for other Browsers (in addition to FireFox) (windmillway)
 - Added: Indi Navigator to ALL tabs except Research Assistant and Tree (Navigator can be toggled on/off with Navigator Tab) (windmillway)
 - Fixed: [ 2477484 ] [4593] Research Assistant - Mc to MAC (fisharebest)
 - Fixed: [ 2475261 ] client.php?action=getxref&position=all fails (fisharebest)
 - Fixed: [ 2474873 ] User Journal entry gets added as GEDCOM News article (canajun2eh)